Bug 1349187 - Ensure the Rollup implementations clear the out-pointer even upon returning false. r=enndeakin+6102

This ensures that the pointer is always either null or a valid nsIContent after
the call to Rollup returns, and avoids potentially leaving it as garbage. An
alternative approach would be to make the call sites responsible for ensuring it
is set to nullptr if the function returns false, but this seems safer.

MozReview-Commit-ID: BXxPBgs6MZL

--HG--
extra : rebase_source : 89ab9984db5114595e581c98a049a0000ea19307