layout/forms/nsComboboxControlFrame.cpp
@@ -1467,6 +1467,10 @@ bool
 nsComboboxControlFrame::Rollup(uint32_t aCount, bool aFlush,
                                const nsIntPoint* pos, nsIContent** aLastRolledUp)
 {
+  if (aLastRolledUp) {
+    *aLastRolledUp = nullptr;
+  }
+
   if (!mDroppedDown) {
     return false;
   }
